--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
+    <title>OTEC Cuenca Lago Ranco</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Otec Cuenca Lago Ranco</h1>
+        <div class="container">
+            <img src="Logo_otec_final.png" alt="Logo OTEC Cuenca Lago Ranco" class="logo">
+            <h1>OTEC CUENCA LAGO RANCO</h1>
+            <p class="slogan">Formamos Talento, Inspiramos Crecimiento en la Cuenca del Lago Ranco</p>
+        </div>
     </header>
     <main>
-        <p>Esta es una página web simple creada como ejemplo.</p>
-        <button id="btn">Haz clic aquí</button>
+        <section class="about">
+            <div class="container">
+                <h2>Sobre Nosotros</h2>
+                <p>Bienvenido a OTEC Cuenca Lago Ranco. Nos dedicamos a la formación de talento y al desarrollo personal y profesional en la región de Los Ríos. Nuestros cursos y talleres están diseñados para inspirar crecimiento y fomentar el desarrollo en la Cuenca del Lago Ranco.</p>
+            </div>
+        </section>
+        <!-- Puedes añadir más secciones aquí -->
     </main>
     <footer>
-        <p>&copy; 2024 Mi Sitio Web</p>
+        <div class="container">
+            <p>&copy; 2024 OTEC Cuenca Lago Ranco. Todos los derechos reservados.</p>
+        </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
